--- a/app/src/main/res/layout/item_bluetooth_device.xml
+++ b/app/src/main/res/layout/item_bluetooth_device.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_device"
-    android:layout_width="256dp"
-    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="160dp"
     android:layout_margin="16dp"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="16dp"
