--- a/app/src/main/res/layout/empty_devices.xml
+++ b/app/src/main/res/layout/empty_devices.xml
@@ -7,35 +7,49 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/empty_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="128dp"
         android:gravity="center"
+        android:maxLines="1"
         android:padding="36dp"
-        android:text="@string/empty_devices"
         android:textColor="@color/white"
-        android:textSize="28sp"
+        app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3"
-        tools:text="@string/empty_devices"
+        tools:text="@string/welcome"
         tools:textColor="@color/black" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/search_devices"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="256dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:background="@drawable/ripple_dust_red"
-        android:elevation="0dp"
         android:text="@string/search_device"
         android:textColor="@color/gray_1"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/empty_text"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintTop_toBottomOf="@id/empty_text" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/version_code"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/ripple_dust_red"
+        android:gravity="center"
+        android:maxLines="1"
+        android:textColor="@color/gray_1"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_devices"
+        tools:text="当前版本:1.1.022（发现新版本）" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
