--- a/app/src/main/res/drawable/ripple_juice_orange.xml
+++ b/app/src/main/res/drawable/ripple_juice_orange.xml
@@ -5,9 +5,9 @@
    <item>
        <shape android:shape="rectangle">
            <gradient
-               android:endColor="@color/dust_red_4"
-               android:centerColor="@color/dust_red_4"
-               android:startColor="@color/dust_red_4" />
+               android:endColor="@color/juice_orange_1"
+               android:centerColor="@color/juice_orange_2"
+               android:startColor="@color/juice_orange_3" />
            <corners android:radius="12dp" />
        </shape>
    </item>
