--- a/app/src/main/res/layout/init_devices.xml
+++ b/app/src/main/res/layout/init_devices.xml
@@ -10,9 +10,9 @@
         android:id="@+id/welcome"
         android:layout_width="0dp"
         android:layout_height="176dp"
-        android:lineSpacingExtra="8dp"
         android:layout_margin="32dp"
         android:gravity="start"
+        android:lineSpacingExtra="8dp"
         android:maxLines="4"
         android:textColor="@color/white"
         app:autoSizeTextType="uniform"
@@ -55,6 +55,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/search_devices"
         tools:text="当前版本:1.1.022（发现新版本）" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="40dp"
+        android:gravity="center"
+        android:maxLines="1"
+        android:text="@string/function_attention"
+        android:textColor="@color/white"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/version_code" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="wrap_content"
