--- a/app/src/robot/res/layout/activity_controller.xml
+++ b/app/src/robot/res/layout/activity_controller.xml
@@ -41,6 +41,7 @@
         android:text="@string/scene_sync"
         android:textColor="@color/white"
         android:textSize="24sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/speed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
